# SWE_Prototype

./: .gitignore  CMakeLists.txt  resources.qrc
gui/: Interface.qml  InterfaceForm.ui.qml
scripts/: itemCreation.js
src/: offermodel.cpp  offermodel.h  swe_prototype.cpp
test/: CMakeLists.txt  tst_modelTest.cpp  tst_modelTest.h
